# StaticFFTExample

./: CMakeLists.txt  Readme.md  main.cu
fftlib/: CMakeLists.txt  cufft_callbacks.cu  cufft_no_callbacks.cu
include/: common.h
